fixed spacing between tabs on nation and world pages

--- a/html/nation/style.css
+++ b/html/nation/style.css
@@ -67,7 +67,7 @@ body {
     display: inline-block;
     padding: 8px 16px;
     font-size: 18px;
-    margin-bottom: -1px;
+    margin: 1px 1px -1px 1px;
 }
 
 #navbar li.active {
@@ -77,6 +77,7 @@ body {
     border-top: 4px solid #3472e9;
     border-left: 1px solid #ccc;
     border-right: 1px solid #ccc;
+    margin: 0 0 -1px 0;
 }
 
 #navbar li img {
